--- a/Public/addC-Manager.html
+++ b/Public/addC-Manager.html
@@ -399,7 +399,7 @@
                     <p>Name: ${customer.FullName}</p>
                     <p>Phone: ${customer.Phone}</p>
                     <p>Email: ${customer.Email}</p>
-					<p>Type: ${customer.customerType}</p>
+					<p>Type: ${customer.CustomerType}</p>
                     <hr>
                 `;
                 customersList.appendChild(customerItem);
