--- a/Public/all-Customer.html
+++ b/Public/all-Customer.html
@@ -39,32 +39,38 @@
 <div id="fh5co-wrapper">
     <div id="fh5co-page">
 		<header id="fh5co-header-section" class="sticky-banner">
-			<div class="container">
-				<div class="nav-header">
-					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="Home.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
-					<nav id="fh5co-menu-wrap" role="navigation">
-						<ul class="sf-menu" id="fh5co-primary-menu">
-							<li class="active"><a href="Home.html">Home</a></li>
-							<li>
-								<a>Assets</a>
-								<ul class="fh5co-sub-menu">
-									<li><a href="all-Customer.html">All</a></li>
-									<li><a href="filter-Customer.html">filter</a></li>
-									<li><a href="new-Customer.html">New</a></li>
-									<li><a href="sale-Customer.html">Sale</a></li>
-								</ul>
-							</li>
-							<li><a href="agent-Customer.html">Agent</a></li>
-							<li><a href="meeting-Customer.html">Meeting</a></li>
-							<li><a href="blog-Customer.html">Blog</a></li>
-							<li><a href="contact-Customer.html">Contact</a></li>
-                            <li><a href="addC-Customer.html">join</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</header>
+            <div class="container">
+                <div class="nav-header">
+                    <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
+                    <h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
+                    <nav id="fh5co-menu-wrap" role="navigation">
+                        <ul class="sf-menu" id="fh5co-primary-menu">
+                            <li class="active"><a href="HomeManager.html">Home</a></li>
+                            <li>
+                                <a>Assets</a>
+                                <ul class="fh5co-sub-menu">
+                                    <li><a href="all-Customer.html">All</a></li>
+                                    <li><a href="filter-Customer.html">Filter</a></li>
+                                    <li><a href="new-Customer.html">New</a></li>
+                                    <li><a href="sale-Customer.html">Sale</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="agent-Customer.html">Agent</a></li>
+                            <li>
+                                <a>Meeting</a>
+                                <ul class="fh5co-sub-menu">
+                                    <li><a href="meeting-Customer.html">Add</a></li>
+                                    <li><a href="meetingV-Customer.html">View</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="blog-Customer.html">Blog</a></li>
+                            <li><a href="contact-Customer.html">Contact</a></li>
+                            <li><a href="">Join</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
 
         <aside id="fh5co-hero" class="js-fullheight">
             <div class="flexslider js-fullheight">
