--- a/Public/contact-Customer.html
+++ b/Public/contact-Customer.html
@@ -88,7 +88,7 @@
 								</li>
 								<li><a href="blog-Customer.html">Blog</a></li>
 								<li><a href="contact-Customer.html">Contact</a></li>
-								<li><a href="">Join</a></li>
+								<li><a href="addC-Customer.html">Join</a></li>
 							</ul>
 						</nav>
 					</div>
