--- a/Public/meetingV-Customer.html
+++ b/Public/meetingV-Customer.html
@@ -201,7 +201,7 @@
                     <li>
                         <a>Meeting</a>
                         <ul class="fh5co-sub-menu">
-                            <li><a href="meeting-Add-Customer.html">Add</a></li>
+                            <li><a href="meeting-Customer.html">Add</a></li>
                             <li><a href="meetingV-Customer.html">View</a></li>
                         </ul>
                     </li>
