--- a/Public/DealsV-Manager.html
+++ b/Public/DealsV-Manager.html
@@ -179,6 +179,7 @@
         }
     </style>
 
+
 <header id="fh5co-header-section" class="sticky-banner">
     <div class="container">
         <div class="nav-header">
@@ -221,7 +222,6 @@
     </div>
 </header>
 
-
     <aside id="fh5co-hero" class="js-fullheight">
         <div class="flexslider js-fullheight">
             <ul class="slides">
@@ -244,14 +244,14 @@
 
 
 
-    <div id="fh5co-blog-section" class="fh5co-section-gray">
+    <div id="fh5co-deals-section" class="fh5co-section-gray">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-                    <h3>View Meeting</h3>
+                    <h3>View Deals</h3>
                 </div>
             </div>
-            <div class="calendar" id="meetingList">
+            <div class="calendar" id="dealList">
             </div>
         </div>
     </div>
@@ -322,71 +322,35 @@
     </div>
 
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const username = sessionStorage.getItem('username');
+       document.addEventListener("DOMContentLoaded", function () {
+        const username = sessionStorage.getItem('username');
             if (!username) {
                 console.error('Username not found in session storage');
                 return;
             }
-
-            fetch(`/meetings?partner=${username}`)
-                .then(response => response.json())
-                .then(data => {
-                    const userMeetings = data.filter(meeting => meeting.Partner === username);
-                    const meetingList = document.getElementById('meetingList');
-                    userMeetings.forEach(meeting => {
-                        const meetingItem = document.createElement('div');
-                        meetingItem.classList.add('meeting-item');
-                        meetingItem.innerHTML = `
-                    <h4>${meeting.MeetingType}</h4><br><br>
-                    <p class="icon-calendar">&nbsp;&nbsp;Date: ${meeting.Date} at  ${meeting.Time}</p><br>
-                    <p class="icon-location">&nbsp;&nbsp;Location: ${meeting.Location}</p><br>
-                    <p class="icon-user">&nbsp;&nbsp;Customer Number: ${meeting.CustomerID}</p><br>
-                    <p class="icon-home">&nbsp;&nbsp;AssetDetails: ${meeting.AssetSelect}</p><br>
-                    <button  class="btn1 btn1-primary" id="sub1" onclick="deleteMeeting('${meeting._id}')">Delete Meeting</button>
-                `;
-                        meetingList.appendChild(meetingItem);
-                    });
-                })
-                .catch(error => console.error('Error fetching meetings:', error));
-        });
-
-
-        const deleteMeeting = (meetingId) => {
-            fetch(`/meeting/${meetingId}`, {
-                method: 'DELETE',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-            })
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok');
-                    }
-                    // If deletion is successful, show a success alert to the user
-                    alert('Meeting deleted successfully!');
-                    // If deletion is successful, remove the element from the page
-                    const meetingElement = document.getElementById(meetingId);
-                    if (meetingElement) {
-                        meetingElement.remove();
-                        // Wait for 5 seconds before reloading the page
-                        setTimeout(() => {
-                            window.location.reload();
-                        }, 5000);
-                    }
-                })
-                .catch(error => {
-                    console.error('Error deleting meeting:', error);
-                    // Handle the error and show an error alert to the user
-                    alert('An error occurred while deleting the meeting. Please try again later.');
+        // Fetch deals for the current partner
+        fetch('/deals?PartnerUserName=${username}')
+            .then(response => response.json())
+            .then(data => {
+                const dealList = document.getElementById('dealList');
+                data.forEach(deal => {
+                    const dealItem = document.createElement('div');
+                    dealItem.classList.add('meeting-item');
+                    // Populate dealItem with deal information
+                    dealItem.innerHTML = `
+                        <h4>Transaction Number: ${deal.transactionNumber}</h4>
+                        <p>Customer ID: ${deal.customerId}</p>
+                        <p>Asset ID: ${deal.assetId}</p>
+                        <p>Deal Type: ${deal.dealType}</p>
+                        <p>Role: ${deal.role}</p>
+                        <p>Deal Commission: ${deal.dealCommission}</p>
+                        <p>Created At: ${deal.createdAtDate} ${deal.createdAtHour}</p>
+                    `;
+                    dealList.appendChild(dealItem);
                 });
-        };
-
-
-
-
-
-
+            })
+            .catch(error => console.error('Error fetching deals:', error));
+    });
 
     </script>
     <script src="js/jquery.min.js"></script>
