--- a/Public/addD-manager.html
+++ b/Public/addD-manager.html
@@ -72,7 +72,6 @@
 <body>
 <div id="fh5co-wrapper">
 <div id="fh5co-page">
-
     <header id="fh5co-header-section" class="sticky-banner">
         <div class="container">
             <div class="nav-header">
@@ -83,23 +82,31 @@
                         <li class="active"><a href="HomeManager.html">Home</a></li>
                         <li>
                             <a>Assets</a>
-                                <ul class="fh5co-sub-menu">
-                                    <li><a href="all-Manager.html">All</a></li>
-                                    <li><a href="filter-Manager.html">Filter</a></li>
-                                    <li><a href="addA-Manager.html">Add</a></li>
-                                    <li><a href="updateA-Manager.html">Update</a></li>
-                                </ul>
+                            <ul class="fh5co-sub-menu">
+                                <li><a href="all-Manager.html">All</a></li>
+                                <li><a href="filter-Manager.html">Filter</a></li>
+                                <li><a href="addA-Manager.html">Add</a></li>
+                                <li><a href="updateA-Manager.html">Update</a></li>
+                            </ul>
                         </li>
                         <li><a href="users-Manager.html">Users</a></li>
                         <li><a href="addC-Manager.html">Customer</a></li>
                         <li><a href="blog-Manager.html">Blog</a></li>
-                        <li><a href="addD-Manager.html">Deal</a></li>
+                        <!-- New "Deals" tab containing "Deal" and "Deals View" links -->
+                        <li>
+                            <a>Deals</a>
+                            <ul class="fh5co-sub-menu">
+                                <li><a href="addD-Manager.html">Add Deal</a></li>
+                                <li><a href="DealsV-Manager.html">View Deals</a></li>
+                            </ul>
+                        </li>
+                        <!-- End of "Deals" tab -->
                         <li>
                             <a>Meetings</a>
-                                <ul class="fh5co-sub-menu">
-                                    <li><a href="meetingA-Manager.html">Add</a></li>
-                                    <li><a href="meetingV-Manager.html">View</a></li>
-                                </ul>
+                            <ul class="fh5co-sub-menu">
+                                <li><a href="meetingA-Manager.html">Add</a></li>
+                                <li><a href="meetingV-Manager.html">View</a></li>
+                            </ul>
                         </li>
                     </ul>
                 </nav>
