--- a/Public/addC-Manager.html
+++ b/Public/addC-Manager.html
@@ -226,6 +226,10 @@
 							<input type="text" class="form-control" id="customerID" name="customerID" required>
 						</div>
 						<div class="form-group">
+							<label for="UserName">Customer's User Name:</label>
+							<input type="text" class="form-control" id="UserName" name="UserName" required>
+						</div>
+						<div class="form-group">
 							<label for="fullName">Full Name:</label>
 							<input type="text" class="form-control" id="fullName" name="fullName" required>
 						</div>
