Description of your changes

--- a/Public/Index.html
+++ b/Public/Index.html
@@ -56,7 +56,7 @@
         button {
             border-radius: 20px;
             border: 1px solid #000000;
-            background-color: #32c053;
+            background-color:  #de6277;
             color: #FFFFFF;
             font-size: 12px;
             font-weight: bold;
