--- a/Public/addC-Manager.html
+++ b/Public/addC-Manager.html
@@ -41,12 +41,17 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 20px; /* מרווחים בין הכרטיסים */
+	font-family: 'Open Sans', sans-serif;
+    color: #333;
+    background-color: #f8f8f8;
 }
 
 .fh5co-customer .animate-box {
     position: relative;
     margin-bottom: 30px; /* מרווח בין הכרטיסים לכלל התוכן */
+	color: #848484;
 }
+ 
 
 
 		/* Styling for customer ID input */
@@ -96,6 +101,7 @@
     height: 100px;
     border-radius: 50%;
     margin-bottom: 10px;
+	margin-top: 10px;
     object-fit: cover;
 }
 
@@ -176,6 +182,7 @@
 						</div>
 					</div>
 				</div>
+			</div><br><br><br>
 
 
 			<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
@@ -198,7 +205,7 @@
 		</div>
 	</div>
 </div>
-</div></div>
+</div>
 
             <div id="fh5co-blog-section" class="fh5co-section-gray">
                 <div class="container">
