--- a/Public/addC-Customer.html
+++ b/Public/addC-Customer.html
@@ -52,8 +52,12 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
+<style>
+	.fh5co-section-gray {
+		background: rgba(0, 0, 0, 0);
+	}
 
-
+		</style>
 </head>
 
 <body>
