blog manager graph

--- a/Public/blog-Manager.html
+++ b/Public/blog-Manager.html
@@ -360,7 +360,18 @@
 
 					</div>
 				</div>
-
+				<div class="container" id="ratingsChartContainer">
+					<div class="row">
+						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
+							<h3>Customer Reviews</h3>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<canvas id="ratingsChart" width="400" height="200"></canvas>
+						</div>
+					</div>
+				</div>
 				<!-- fh5co-blog-section -->
 
 				<!-- fh5co-blog-section -->
@@ -486,9 +497,87 @@
 			}
 		});
 
+		document.addEventListener('DOMContentLoaded', async () => {
+        try {
+            const response = await fetch('/feedback');
+            if (!response.ok) {
+                throw new Error('Failed to fetch feedback data');
+            }
+            const data = await response.json();
 
+            // Calculate ratings count
+            const ratingsCount = {
+                '1 star': 0,
+                '2 stars': 0,
+                '3 stars': 0,
+                '4 stars': 0,
+                '5 stars': 0
+            };
+
+            data.forEach((feedback) => {
+                ratingsCount[`${feedback.rating} stars`] += 1;
+            });
+
+            // Draw ratings chart
+            const ratingsChartCanvas = document.getElementById('ratingsChart');
+            if (!ratingsChartCanvas) {
+                throw new Error('Element with ID "ratingsChart" not found');
+            }
+
+            new Chart(ratingsChartCanvas, {
+                type: 'bar',
+                data: {
+                    labels: ['1 Star', '2 Stars', '3 Stars', '4 Stars', '5 Stars'],
+                    datasets: [{
+                        label: 'Ratings Count',
+                        data: [
+                            ratingsCount['1 star'],
+                            ratingsCount['2 stars'],
+                            ratingsCount['3 stars'],
+                            ratingsCount['4 stars'],
+                            ratingsCount['5 stars']
+                        ],
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 0.5)',
+                            'rgba(255, 159, 64, 0.5)',
+                            'rgba(255, 205, 86, 0.5)',
+                            'rgba(75, 192, 192, 0.5)',
+                            'rgba(54, 162, 235, 0.5)'
+                        ],
+                        borderColor: [
+                            'rgb(255, 99, 132)',
+                            'rgb(255, 159, 64)',
+                            'rgb(255, 205, 86)',
+                            'rgb(75, 192, 192)',
+                            'rgb(54, 162, 235)'
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+				options: {
+    scales: {
+		
+        y: {
+            beginAtZero: true,
+            stepSize: 1,
+            ticks: {
+                integer: true  // Display only integer ticks
+            }
+        }
+		
+    }
+}
+
+            });
+        } catch (error) {
+            console.error('Error fetching feedback:', error.message);
+        }
+    });
 
 	</script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+	
+
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
 	<script src="js/jquery.easing.1.3.js"></script>
