--- a/Public/blog-Manager.html
+++ b/Public/blog-Manager.html
@@ -507,7 +507,7 @@
 
             // Calculate ratings count
             const ratingsCount = {
-                '1 star': 0,
+                '1 stars': 0,
                 '2 stars': 0,
                 '3 stars': 0,
                 '4 stars': 0,
@@ -527,11 +527,11 @@
             new Chart(ratingsChartCanvas, {
                 type: 'bar',
                 data: {
-                    labels: ['1 Star', '2 Stars', '3 Stars', '4 Stars', '5 Stars'],
+                    labels: ['1 Stars', '2 Stars', '3 Stars', '4 Stars', '5 Stars'],
                     datasets: [{
                         label: 'Ratings Count',
                         data: [
-                            ratingsCount['1 star'],
+                            ratingsCount['1 stars'],
                             ratingsCount['2 stars'],
                             ratingsCount['3 stars'],
                             ratingsCount['4 stars'],
