blog manager graph

--- a/Public/blog-Manager.html
+++ b/Public/blog-Manager.html
@@ -527,7 +527,7 @@
             new Chart(ratingsChartCanvas, {
                 type: 'bar',
                 data: {
-                    labels: ['1 Stars', '2 Stars', '3 Stars', '4 Stars', '5 Stars'],
+                    labels: ['1 Star', '2 Stars', '3 Stars', '4 Stars', '5 Stars'],
                     datasets: [{
                         label: 'Ratings Count',
                         data: [
