--- a/Public/blog-Customer.html
+++ b/Public/blog-Customer.html
@@ -196,10 +196,10 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
+					<h1 id="fh5co-logo"><a href="Home.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
-							<li class="active"><a href="HomeManager.html">Home</a></li>
+							<li class="active"><a href="Home.html">Home</a></li>
 							<li>
 								<a>Assets</a>
 								<ul class="fh5co-sub-menu">
@@ -209,7 +209,8 @@
 									<li><a href="sale-Customer.html">Sale</a></li>
 								</ul>
 							</li>
-							<li><a href="agent-Customer.html">Agent</a></li>
+							<li><a href="blog-Customer.html">Blog</a></li>
+							<li><a href="addC-Customer.html">Join</a></li>
 							<li>
 								<a>Meeting</a>
 								<ul class="fh5co-sub-menu">
@@ -217,9 +218,6 @@
 									<li><a href="meetingV-Customer.html">View</a></li>
 								</ul>
 							</li>
-							<li><a href="blog-Customer.html">Blog</a></li>
-							<li><a href="contact-Customer.html">Contact</a></li>
-							<li><a href="addC-Customer.html">Join</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -236,7 +234,7 @@
 				   			<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 			   				<div class="slider-text-inner">
 		   						<h2 class="heading-title">Our Blog</h2>
-		   						<p class="fh5co-lead"> Coming Soon <i class="icon-heart3"></i> </p>
+		   						<p class="fh5co-lead"><i class="icon-heart3"></i> </p>
 			   				</div>
 			   			</div>
 				   		</div>
