--- a/Public/new-Customer.html
+++ b/Public/new-Customer.html
@@ -40,10 +40,10 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
+					<h1 id="fh5co-logo"><a href="Home.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
-							<li class="active"><a href="HomeManager.html">Home</a></li>
+							<li class="active"><a href="Home.html">Home</a></li>
 							<li>
 								<a>Assets</a>
 								<ul class="fh5co-sub-menu">
@@ -53,7 +53,8 @@
 									<li><a href="sale-Customer.html">Sale</a></li>
 								</ul>
 							</li>
-							<li><a href="agent-Customer.html">Agent</a></li>
+							<li><a href="blog-Customer.html">Blog</a></li>
+							<li><a href="addC-Customer.html">Join</a></li>
 							<li>
 								<a>Meeting</a>
 								<ul class="fh5co-sub-menu">
@@ -61,9 +62,6 @@
 									<li><a href="meetingV-Customer.html">View</a></li>
 								</ul>
 							</li>
-							<li><a href="blog-Customer.html">Blog</a></li>
-							<li><a href="contact-Customer.html">Contact</a></li>
-							<li><a href="addC-Customer.html">Join</a></li>
 						</ul>
 					</nav>
 				</div>
